--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -1,31 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Testing"
-    android:gravity="center"
+    android:background="@drawable/background2"
     android:orientation="vertical"
-    android:background="#5fbfaa">
-    <EditText
-        android:layout_width="wrap_content"
-        android:id="@+id/checkId"
-        android:layout_height="50dp"
+    tools:context=".Testing">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:hint="전화번호 입력"
-        android:textColorHint="#356a4c"
-        android:textColor="#ffffff" />
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="로그인"
-        android:id="@+id/login"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:id="@+id/register"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="전화번호"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/testing_PhoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="당신의 전화번호를  입력해주세요."
+                android:textColor="#356a4c"
+                android:textColorHint="#356a4c" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이름 : " />
+
+            <EditText
+                android:id="@+id/testing_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="성함을 입력해주세요." />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="나이 : " />
+
+            <EditText
+                android:id="@+id/testing_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="나이를 입력해주세요." />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="성별 : " />
+
+            <CheckBox
+                android:id="@+id/testing_check_man"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/text_gender"
+                android:layout_alignBottom="@+id/text_gender"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/text_gender"
+                android:text="Man"
+                android:textSize="15dp" />
+
+            <CheckBox
+                android:id="@+id/testing_check_woman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/text_gender"
+                android:layout_alignBottom="@+id/text_gender"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/check_man"
+                android:text="Woman"
+                android:textSize="15dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인증코드"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/testing_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="아래 링크를 통해 얻을 수 있습니다."
+                android:textColor="#356a4c"
+                android:textColorHint="#346a4c" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/testing_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#f5fffa	"
+            android:text="회원가입"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/testing_goToLogin_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:background="#fffafa	"
+            android:text="로그인 화면으로 돌아가기" />
+    </LinearLayout>
 </LinearLayout>
