--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -102,6 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
                     android:hint="바코드가 찍히는 부분"
+                    android:imeOptions="actionDone"
                     android:maxLength="30" />
 
 
