--- a/app/src/main/res/layout/login_sample.xml
+++ b/app/src/main/res/layout/login_sample.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".Login">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,27 +38,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"
+            android:layout_weight="5"
             android:orientation="vertical"
             android:weightSum="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.5">
+                android:layout_weight="2">
 
                 <TextView
                     android:id="@+id/phoneNumberTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="010-"
-                    android:textSize="45dp" />
+                    android:textSize="48dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="8.5"
+                android:layout_weight="9"
                 android:orientation="vertical">
 
                 <TableLayout
@@ -206,16 +203,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:layout_marginTop="3dp"
-            android:weightSum="1.5">
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/loginButton"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:background="@drawable/buttonshape3"
                 android:letterSpacing="0.2"
@@ -226,8 +222,7 @@
             <Button
                 android:id="@+id/login_goToRegister"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:background="@drawable/buttonshape3"
                 android:text="JOIN US"
                 android:textColor="#430000"
@@ -235,4 +230,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
