--- a/app/src/main/res/layout/in_cart_list_item.xml
+++ b/app/src/main/res/layout/in_cart_list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="5">
+    android:weightSum="5"
+    android:descendantFocusability="blocksDescendants">
 
     <TextView
         android:id="@+id/itemName"
